// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`the live bank (no quiz seed) > always answering a 1`] = `
[
  "bonjovi_britney",
  "bohemian_billiejean",
  "dancefloor_carcry",
  "horror_comedy",
  "guitar_synth",
  "hits_gems",
  "fast_slow",
  "ai_handmade",
  "fresh_timeless",
  "hebrew_mix",
]
`;

exports[`the live bank (no quiz seed) > always answering b 1`] = `
[
  "bonjovi_britney",
  "heavy_smooth",
  "bohemian_billiejean",
  "horror_comedy",
  "guitar_synth",
  "hits_gems",
  "hebrew_mix",
  "rain_sun",
  "fresh_timeless",
  "simple_complex",
]
`;
